Fixed text alignment in mobile drop-down menu with flex-end. Added hover-effects to all buttons in con-gallery (rooms & services). Other minor changes.

--- a/styles/style.css
+++ b/styles/style.css
@@ -173,17 +173,18 @@ KANSKJE EN BESKRIVELSE FOR TING SOM IKKE HAR EN BESKRIVELSE? MED ARIA LABELS ELN
 
 .header-section__navigation-list-item {
     display: flex;
+    justify-content: flex-end;
     list-style: none;
-    text-align: right;
-    padding: 1rem 2rem 1rem 2rem;
-    width: 100%;
+    padding: 1rem 2rem;
+    min-width: 100%;
     width: auto;
 }
 
 .header-section__navigation-list-item:active,
 .header-section__navigation-list-item:hover {
-    background-color: #3b86b8;
+    background-color: #1090b8;
     cursor: pointer;
+    border-radius: .3rem;
 }
 
 .header-section__burger:checked ~ .header-section__navigation {
@@ -305,9 +306,15 @@ KANSKJE EN BESKRIVELSE FOR TING SOM IKKE HAR EN BESKRIVELSE? MED ARIA LABELS ELN
 button {
     /* endre til felles button-BEM etterpå */
     background-color: white;
+
     opacity: .8;
 }
 
+.content-section__gal-con-service-btn:hover {
+    cursor: pointer;
+    opacity: 1;
+/* ENDRE NAVN, DEN HETER SERVICE-BTN PÅ BÅDE SERVICE & ROOMS... */
+}
 /* ------------------------------- REVIEWS SECTION PAGE 1 ---------------------------------- */
 
 .intro__overview__quote {
@@ -510,6 +517,9 @@ button {
 /* 
 --- FINN UT HVORFOR DE IKKE VIL BLI SENTRERT, MEN ROW OG COLUMN FUNKER
 --- KOMBINERE DEM FOR MER KOMPAKT CSS?
+
+--- BUTTON PÅ BILDET PINKY FORSVINN PÅ 375px, IDK WHY, DET SKJER IKKE PÅ NOEN AV DE ANDRE.
+DVS... HELE SIDE 4 IS ACTING STRANGE. BEGYNNE FRA START?
 */
 
 
@@ -608,7 +618,7 @@ button {
     }
 
     .header-section__navigation-list-item:hover {
-        background-color: red;
+        background-color: rgb(219, 219, 219);
     }
 
     .header-section__navigation-list-item:nth-child(6) {
